fix logo in mobile display error; set mobile header nav to dark mode;

--- a/src/global.less
+++ b/src/global.less
@@ -38,6 +38,24 @@ ol {
   .ant-spin {
     margin: 0 auto;
   }
+
+  // for basic layout
+  // mobile header
+  .ant-pro-global-header {
+    background-color: #001529 !important;
+
+    .ant-pro-global-header-trigger {
+      color: #fff !important;
+      &:hover {
+        background-color: #001529 !important;
+      }
+    }
+  }
+
+  .ant-pro-global-header-logo img {
+    height: 32px;
+    width: auto !important;
+  }
 }
 
 @media (max-width: @screen-xs) {
